apps/staging/nextcloud/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
spec:
  replicas: 1
  template:
    spec:
      nodeSelector:
        node-type: amd64
      volumes:
      - name: creds
        secret:
          secretName: nextcloud
