apps/staging/nextcloud/ingress.yaml
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ts-nextcloud-ingress
#   namespace: nextcloud
# spec:
#   ingressClassName: tailscale
#   defaultBackend:
#     service:
#       name: nextcloud-http
#       port:
#         number: 80
#   tls:
#     - hosts:
#         - nxc-s
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
spec:
  ingressClassName: traefik
  rules:
  - host: nxc-s.boxadvisers.com
    http:
      paths:
      - backend:
          service:
            name: nextcloud-http
            port:
              number: 80
        path: /
        pathType: Prefix
